# SDC_Mapreduce

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CrowConfig.cmake  README.md  all.sh  build.sh  commands  container_installations.sh  install.sh  install_2.sh  k8_config.yaml
CMakeModules/: FindConservator.cmake
app/: a.out  final_output.txt  mapper.py  reducer.py  reducer_input.txt  test.cpp
clientsdk/: app.py  job_details.py  submit_map_reduce.py
cmd/master/: master.go
cmd/worker/: worker.go
docker/: Dockerfile.master  Dockerfile.master_sub  Dockerfile.worker  Dockerfile.worker_sub
protos/: central.proto  sample.proto
src/: CMakeLists.txt  Makefile  app.py  cmake_install.cmake  server.py
src/app/: input.txt  mapper.py  output.txt  reducer.py
src/master/: CMakeLists.txt  Makefile  cmake_install.cmake  job.h  master.cc  master.cpp  master.h  sharding.cpp  sharding.h  task.h  worker.h
src/proto_code/: central.grpc.pb.cc  central.grpc.pb.h  central.pb.cc  central.pb.h
src/test/: CMakeLists.txt  MakeFile  cmake_install.cmake  test  test.cpp
src/util/: MakeFile  blob.cpp  blob.h  cmake_install.cmake  constants.h  crow_all.h  service_discovery.h  shard.h  trace.h  zook.h
src/webclient/: CMakeLists.txt  webclient  webclient.cpp
src/worker/: CMakeLists.txt  Makefile  cmake_install.cmake  k8_config.yaml  myfile.txt  python_executor.h  sharding.cpp  sharding.h  worker.cc  worker.cpp
src/worker/job_1/reducers/: 1_10_1  1_10_2  1_10_3  1_11_1  1_11_2  1_11_3  1_12_1  1_12_2  1_12_3  1_13_1  1_13_2  1_13_3  1_14_1  1_14_2  1_14_3  1_15_1  1_15_2  1_15_3  1_16_1  1_16_2  1_16_3  1_17_1  1_17_2  1_17_3  1_18_1  1_18_2  1_18_3  1_19_1  1_19_2  1_19_3  1_1_1  1_1_2  1_1_3  1_20_1  1_20_2  1_20_3  1_2_1  1_2_2  1_2_3  1_3_1  (+24 more)
src/worker/reducers/: 0_20_1  0_20_2  0_20_3  final_21.txt  final_22.txt  final_23.txt  temp
